New GGX breaks OpenCL kernel #48732

Closed
opened 2016-06-25 00:22:01 +02:00 by mathieu menuet · 22 comments

System Information
R9 280X, Catalyst 16.3 on win 7 x64

Blender Version
Broken: 823ab66

Short description of error
broken kernel

Exact steps for others to reproduce the error
Hit F12 on default scene with cycles and GPU/OpenCL enabled:

Device init success
Compiling OpenCL kernel ...
Build flags: -D__NODES_MAX_GROUP__=3 -D__NODES_FEATURES__=4 -D__MAX_CLOSURE__=5
-D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__
NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
"C:\Users\test\AppData\Local\Temp\OCL2992T1.cl", line 81696: error: expression must have arithmetic, enum, or pointer type
        if(sc->T == make_float3(0.0f, 0.0f, 0.0f))
           ^

1 error detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCL2992T1.cl".
Frontend phase failed compilation.

OpenCL build failed: errors in console
Error: OpenCL build failed: errors in console
**System Information** R9 280X, Catalyst 16.3 on win 7 x64 **Blender Version** Broken: 823ab66 **Short description of error** broken kernel **Exact steps for others to reproduce the error** Hit F12 on default scene with cycles and GPU/OpenCL enabled: ``` Device init success Compiling OpenCL kernel ... Build flags: -D__NODES_MAX_GROUP__=3 -D__NODES_FEATURES__=4 -D__MAX_CLOSURE__=5 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__ NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: "C:\Users\test\AppData\Local\Temp\OCL2992T1.cl", line 81696: error: expression must have arithmetic, enum, or pointer type if(sc->T == make_float3(0.0f, 0.0f, 0.0f)) ^ 1 error detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCL2992T1.cl". Frontend phase failed compilation. OpenCL build failed: errors in console Error: OpenCL build failed: errors in console ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli

This issue was referenced by blender/cycles@fb9833c20f

This issue was referenced by blender/cycles@fb9833c20f94febd9bcd7e8ea2d11a73f7b48ab7

This issue was referenced by 99088f8b55

This issue was referenced by 99088f8b552ccbdff5834a060a2a2e032e25f0b5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Hi,
it still broken:

Compiling OpenCL kernel ...
Build flags: -D__NODES_MAX_GROUP__=3 -D__NODES_FEATURES__=7 -D__MAX_CLOSURE__=64
 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D_
_NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
Kernel compilation finished in 3.45s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=3 -D__
NODES_FEATURES__=7 -D__MAX_CLOSURE__=64 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D_
_NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_B
RANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__
OpenCL kernel build output:
"C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 45818: error: argument of type "__global uint *" is incompatible with parameter of type
          "uint *"
                                eval, omega_in,  &domega_in->dx, &domega_in->dy, pdf, &ccl_fetch(sd, lcg_state));

      ^

"C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 45822: error: argument of type "__global uint *" is incompatible with parameter of type "uint *"
                                eval, omega_in,  &domega_in->dx, &domega_in->dy, pdf, &ccl_fetch(sd,lcg_state));

      ^

"C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 45912: error: argument of type "__global uint *" is incompatible with parameter of type "uint *"
                                eval = bsdf_microfacet_multi_ggx_eval_reflect(sc, ccl_fetch(sd, I), omega_in, pdf, &ccl_fetch(sd, lcg_state));

                                   ^

"C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 45915: error: argument of type "__global uint *" is incompatible with parameter of type "uint *"
                                eval = bsdf_microfacet_multi_ggx_glass_eval_refl
ect(sc, ccl_fetch(sd, I), omega_in, pdf, &ccl_fetch(sd, lcg_state));

                                         ^

"C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 45980: error: argument of type "__global uint *" is incompatible with parameter of type "uint *"
                                eval = bsdf_microfacet_multi_ggx_eval_transmit(sc, ccl_fetch(sd, I), omega_in, pdf, &ccl_fetch(sd, lcg_state));

                                    ^

"C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 45983: error: argument of type "__global uint *" is incompatible with parameter of type "uint *"
                                eval = bsdf_microfacet_multi_ggx_glass_eval_transmit(sc, ccl_fetch(sd, I), omega_in, pdf, &ccl_fetch(sd, lcg_state));

                                          ^

"C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 53187: error: argument of type "__global PathState *" is incompatible with parameter of type "const PathState *"
                ccl_fetch(sd, lcg_state) = lcg_state_init(rng, state, 0xb4bc3953
);
                                                               ^

7 errors detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCL2396T2.cl".
Frontend phase failed compilation.

OpenCL build failed: errors in console
Faled to compile data_init
Hi, it still broken: ``` Compiling OpenCL kernel ... Build flags: -D__NODES_MAX_GROUP__=3 -D__NODES_FEATURES__=7 -D__MAX_CLOSURE__=64 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D_ _NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ Kernel compilation finished in 3.45s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=3 -D__ NODES_FEATURES__=7 -D__MAX_CLOSURE__=64 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D_ _NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_B RANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__ OpenCL kernel build output: "C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 45818: error: argument of type "__global uint *" is incompatible with parameter of type "uint *" eval, omega_in, &domega_in->dx, &domega_in->dy, pdf, &ccl_fetch(sd, lcg_state)); ^ "C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 45822: error: argument of type "__global uint *" is incompatible with parameter of type "uint *" eval, omega_in, &domega_in->dx, &domega_in->dy, pdf, &ccl_fetch(sd,lcg_state)); ^ "C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 45912: error: argument of type "__global uint *" is incompatible with parameter of type "uint *" eval = bsdf_microfacet_multi_ggx_eval_reflect(sc, ccl_fetch(sd, I), omega_in, pdf, &ccl_fetch(sd, lcg_state)); ^ "C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 45915: error: argument of type "__global uint *" is incompatible with parameter of type "uint *" eval = bsdf_microfacet_multi_ggx_glass_eval_refl ect(sc, ccl_fetch(sd, I), omega_in, pdf, &ccl_fetch(sd, lcg_state)); ^ "C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 45980: error: argument of type "__global uint *" is incompatible with parameter of type "uint *" eval = bsdf_microfacet_multi_ggx_eval_transmit(sc, ccl_fetch(sd, I), omega_in, pdf, &ccl_fetch(sd, lcg_state)); ^ "C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 45983: error: argument of type "__global uint *" is incompatible with parameter of type "uint *" eval = bsdf_microfacet_multi_ggx_glass_eval_transmit(sc, ccl_fetch(sd, I), omega_in, pdf, &ccl_fetch(sd, lcg_state)); ^ "C:\Users\test\AppData\Local\Temp\OCL2396T2.cl", line 53187: error: argument of type "__global PathState *" is incompatible with parameter of type "const PathState *" ccl_fetch(sd, lcg_state) = lcg_state_init(rng, state, 0xb4bc3953 ); ^ 7 errors detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCL2396T2.cl". Frontend phase failed compilation. OpenCL build failed: errors in console Faled to compile data_init ```
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscribers: @LukasStockner, @ThomasDinges

Added subscribers: @LukasStockner, @ThomasDinges

Tested on nvidia opencl, don't have a AMD card to test here. @LukasStockner any idea?

Tested on nvidia opencl, don't have a AMD card to test here. @LukasStockner any idea?
Member

@ThomasDinges, apparently I forgot the OpenCL-compliant syntax (ccl_fetch(), the addr_space keywords etc.) - I'll fix it as soon as possible.

@ThomasDinges, apparently I forgot the OpenCL-compliant syntax (ccl_fetch(), the addr_space keywords etc.) - I'll fix it as soon as possible.
Lukas Stockner self-assigned this 2016-06-25 22:19:07 +02:00

This issue was referenced by blender/cycles@ace4aab253

This issue was referenced by blender/cycles@ace4aab2538470f3514bd340ca38d7f31993361d

This issue was referenced by 2a69b09b62

This issue was referenced by 2a69b09b62c2f339f68883c9c7edfc4a6dd1ef8d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author

Maybe the foundation could invest 90€ in an AMD GPU for you Lukas ? With all what you do for cycles, it would help you a lot to test. In the meantime, I can report each step:

Compiling OpenCL kernel ...
Build flags: -D__NODES_MAX_GROUP__=2 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1
-D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__
NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
Kernel compilation finished in 2.36s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__
NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__
NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR
ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__
OpenCL kernel build output:
"C:\Users\test\AppData\Local\Temp\OCL2104T2.cl", line 22176: error: argument of type "uint *" is incompatible with parameter of type "__global uint *"
        lcg_step_uint(&rng);
                      ^

1 error detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCL2104T2.cl".
Frontend phase failed compilation.

OpenCL build failed: errors in console
Faled to compile data_init
Error: OpenCL build failed: errors in console
Maybe the foundation could invest 90€ in an AMD GPU for you Lukas ? With all what you do for cycles, it would help you a lot to test. In the meantime, I can report each step: ``` Compiling OpenCL kernel ... Build flags: -D__NODES_MAX_GROUP__=2 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__ NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ Kernel compilation finished in 2.36s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__ NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__ NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__ OpenCL kernel build output: "C:\Users\test\AppData\Local\Temp\OCL2104T2.cl", line 22176: error: argument of type "uint *" is incompatible with parameter of type "__global uint *" lcg_step_uint(&rng); ^ 1 error detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCL2104T2.cl". Frontend phase failed compilation. OpenCL build failed: errors in console Faled to compile data_init Error: OpenCL build failed: errors in console ```
Member

Well, I suppose I could try to install the AMD CPU runtime as well...

Anyways, instead of committing tons of additional "fixes", I think it would be best if you tried them out first :)
Could you remove the "ccl_addr_space" in kernel_random.h, line 235 (ccl_device uint lcg_step_uint(ccl_addr_space uint *rng) to ccl_device uint lcg_step_uint(uint *rng)) and see if it works that way?
The file is in intern/cycles/kernel/ if you build from the source yourself, and in 2.77/scripts/addons/cycles/kernel/ if you use the buildbot builds.

Well, I suppose I could try to install the AMD CPU runtime as well... Anyways, instead of committing tons of additional "fixes", I think it would be best if you tried them out first :) Could you remove the "ccl_addr_space" in kernel_random.h, line 235 (`ccl_device uint lcg_step_uint(ccl_addr_space uint *rng)` to `ccl_device uint lcg_step_uint(uint *rng)`) and see if it works that way? The file is in intern/cycles/kernel/ if you build from the source yourself, and in 2.77/scripts/addons/cycles/kernel/ if you use the buildbot builds.
Author

As you wish, I can report back errors on every step or you can install the compiler. Latest proposed change done, new error is:

Device init success
Compiling OpenCL kernel ...
Build flags: -D__NODES_MAX_GROUP__=2 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1
-D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__
NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
Kernel compilation finished in 2.26s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__
NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__
NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR
ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__
Kernel compilation finished in 1.13s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__
NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__
NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR
ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__
Kernel compilation finished in 0.67s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__
NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__
NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR
ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__
Kernel compilation finished in 2.03s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__
NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__
NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR
ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__
Kernel compilation finished in 0.12s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__
NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__
NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR
ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__
Kernel compilation finished in 3.12s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__
NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__
NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR
ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__
OpenCL kernel build output:
"C:\Users\test\AppData\Local\Temp\OCL2848T7.cl", line 58112: error: argument
          of type "__global uint *" is incompatible with parameter of type "RNG *"
                shader_eval_surface(kg, sd, rng, state, rbsdf, state->flag, SHADER_CONTEXT_MAIN);
                                            ^

1 error detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCL2848T7.cl".
Frontend phase failed compilation.

OpenCL build failed: errors in console
Faled to compile shader_eval
As you wish, I can report back errors on every step or you can install the compiler. Latest proposed change done, new error is: ``` Device init success Compiling OpenCL kernel ... Build flags: -D__NODES_MAX_GROUP__=2 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__ NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ Kernel compilation finished in 2.26s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__ NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__ NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__ Kernel compilation finished in 1.13s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__ NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__ NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__ Kernel compilation finished in 0.67s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__ NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__ NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__ Kernel compilation finished in 2.03s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__ NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__ NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__ Kernel compilation finished in 0.12s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__ NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__ NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__ Kernel compilation finished in 3.12s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__ -D__NODES_MAX_GROUP__=2 -D__ NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__ NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_VOLUME__ -D__NO_SUBSURFACE__ -D__NO_BR ANCHED_PATH__ -D__COMPUTE_DEVICE_GPU__ OpenCL kernel build output: "C:\Users\test\AppData\Local\Temp\OCL2848T7.cl", line 58112: error: argument of type "__global uint *" is incompatible with parameter of type "RNG *" shader_eval_surface(kg, sd, rng, state, rbsdf, state->flag, SHADER_CONTEXT_MAIN); ^ 1 error detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCL2848T7.cl". Frontend phase failed compilation. OpenCL build failed: errors in console Faled to compile shader_eval ```
Member

Okay, next step: In kernel_shader.h, line 830 (same folder as before), add ccl_addr_space in front of RNG (ccl_device void shader_eval_surface(KernelGlobals *kg, ShaderData *sd, RNG *rng, to ccl_device void shader_eval_surface(KernelGlobals *kg, ShaderData *sd, ccl_addr_space RNG *rng,).

Okay, next step: In kernel_shader.h, line 830 (same folder as before), add ccl_addr_space in front of RNG (`ccl_device void shader_eval_surface(KernelGlobals *kg, ShaderData *sd, RNG *rng,` to `ccl_device void shader_eval_surface(KernelGlobals *kg, ShaderData *sd, ccl_addr_space RNG *rng,`).
Author
"C:\Users\test\AppData\Local\Temp\OCL2484T2.cl", line 53187: error: argument
          of type "__global RNG *" is incompatible with parameter of type "RNG *"
                ccl_fetch(sd, lcg_state) = lcg_state_init(rng, state, 0xb4bc3953);
                                                          ^

1 error detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCL2484T2.cl".
Frontend phase failed compilation.

OpenCL build failed: errors in console
Faled to compile data_init
``` "C:\Users\test\AppData\Local\Temp\OCL2484T2.cl", line 53187: error: argument of type "__global RNG *" is incompatible with parameter of type "RNG *" ccl_fetch(sd, lcg_state) = lcg_state_init(rng, state, 0xb4bc3953); ^ 1 error detected in the compilation of "C:\Users\test\AppData\Local\Temp\OCL2484T2.cl". Frontend phase failed compilation. OpenCL build failed: errors in console Faled to compile data_init ```

This issue was referenced by blender/cycles@6e89e10d7a

This issue was referenced by blender/cycles@6e89e10d7a8431b7f58c71e48dd16b5747daa985

This issue was referenced by 23cc453975

This issue was referenced by 23cc453975c42069bac21e849b1bf7e3e60cd8e7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48732
No description provided.