Fix T48732, OpenCL compile failure after Multiscatter GGX commit.

Use OpenCL "all" builtin type for conversion, according to OpenCL 1.1 spec 6.3e.